--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.12",
+    "@heroicons/vue": "^2.0.16",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.14",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
